--- a/frontend/templates/fleet_mgmt.html
+++ b/frontend/templates/fleet_mgmt.html
@@ -3,6 +3,17 @@
 
     <div id="fleet-section">
         <h3>Fleet</h3>
+        <div class="player-select">
+                <label for="fleet-management-fleet-owner">Owner:</label>
+                <select id="fleet-management-fleet-owner">
+                    <option value="Player 1" selected>Player 1</option>
+                    <option value="Player 2">Player 2</option>
+                    <option value="Player 3">Player 3</option>
+                    <option value="Player 4">Player 4</option>
+                    <option value="Player 5">Player 5</option>
+                    <option value="Player 6">Player 6</option>
+                </select>
+            </div>
         <div class="fleet-section">
             <div class="unit-row" data-unit="fighter">
                 <span class="unit-icon"><img src="/static/images/ships/fighter_icon.png" class="ship-icon"
