Added ground units to the fleet manager's fleet portion to account for ground units carried by ships with capacity.

--- a/frontend/templates/fleet_mgmt.html
+++ b/frontend/templates/fleet_mgmt.html
@@ -78,6 +78,24 @@
                 </div>
                 <span class="unit-count" id="fleet-flagship-count">0</span>
             </div>
+            <div class="unit-row" data-unit="infantry">
+                <span class="unit-icon"><img src="/static/images/ground/infantry_icon.png" class="ship-icon"
+                                             alt="Infantry"><span class="tooltiptext">Infantry</span></span>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="infantry">▲</button>
+                    <button class="arrow down" data-unit="infantry">▼</button>
+                </div>
+                <span class="unit-count" id="fleet-infantry-count">0</span>
+            </div>
+            <div class="unit-row" data-unit="mech">
+                <span class="unit-icon"><img src="/static/images/ground/mech_icon.png" class="ship-icon"
+                                             alt="Mech"><span class="tooltiptext">Mech</span></span>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="mech">▲</button>
+                    <button class="arrow down" data-unit="mech">▼</button>
+                </div>
+                <span class="unit-count" id="fleet-mech-count">0</span>
+            </div>
         </div>
     </div>
 
