--- a/frontend/templates/move.html
+++ b/frontend/templates/move.html
@@ -9,46 +9,46 @@
         <div class="grid-wrapper">
             <div class="hex-grid move">
                 <!-- 37 empty hexes -->
-                <div class="hex mecatol" data-position="0-0"></div>
+                <div class="hex mecatol" data-position="0-0"><span class="designation-text">0-0</span></div>
                 <!-- Inner Ring (6 tiles) -->
-                <div class="hex inner" data-position="1-4"></div>
-                <div class="hex inner" data-position="2-4"></div>
-                <div class="hex inner" data-position="3-4"></div>
-                <div class="hex inner" data-position="4-4"></div>
-                <div class="hex inner" data-position="5-4"></div>
-                <div class="hex inner" data-position="6-4"></div>
+                <div class="hex inner" data-position="1-4"><span class="designation-text">1-4</span></div>
+                <div class="hex inner" data-position="2-4"><span class="designation-text">2-4</span></div>
+                <div class="hex inner" data-position="3-4"><span class="designation-text">3-4</span></div>
+                <div class="hex inner" data-position="4-4"><span class="designation-text">4-4</span></div>
+                <div class="hex inner" data-position="5-4"><span class="designation-text">5-4</span></div>
+                <div class="hex inner" data-position="6-4"><span class="designation-text">6-4</span></div>
                 <!-- Middle Ring (12 tiles) -->
-                <div class="hex middle" data-position="1-1"></div>
-                <div class="hex middle" data-position="1-3"></div>
-                <div class="hex middle" data-position="2-1"></div>
-                <div class="hex middle" data-position="2-3"></div>
-                <div class="hex middle" data-position="3-1"></div>
-                <div class="hex middle" data-position="3-3"></div>
-                <div class="hex middle" data-position="4-1"></div>
-                <div class="hex middle" data-position="4-3"></div>
-                <div class="hex middle" data-position="5-1"></div>
-                <div class="hex middle" data-position="5-3"></div>
-                <div class="hex middle" data-position="6-1"></div>
-                <div class="hex middle" data-position="6-3"></div>
+                <div class="hex middle" data-position="1-1"><span class="designation-text">1-1</span></div>
+                <div class="hex middle" data-position="1-3"><span class="designation-text">1-3</span></div>
+                <div class="hex middle" data-position="2-1"><span class="designation-text">2-1</span></div>
+                <div class="hex middle" data-position="2-3"><span class="designation-text">2-3</span></div>
+                <div class="hex middle" data-position="3-1"><span class="designation-text">3-1</span></div>
+                <div class="hex middle" data-position="3-3"><span class="designation-text">3-3</span></div>
+                <div class="hex middle" data-position="4-1"><span class="designation-text">4-1</span></div>
+                <div class="hex middle" data-position="4-3"><span class="designation-text">4-3</span></div>
+                <div class="hex middle" data-position="5-1"><span class="designation-text">5-1</span></div>
+                <div class="hex middle" data-position="5-3"><span class="designation-text">5-3</span></div>
+                <div class="hex middle" data-position="6-1"><span class="designation-text">6-1</span></div>
+                <div class="hex middle" data-position="6-3"><span class="designation-text">6-3</span></div>
                 <!-- Outer Ring (18 tiles) -->
-                <div class="hex" data-position="1"></div>
-                <div class="hex" data-position="1-0"></div>
-                <div class="hex" data-position="2-2"></div>
-                <div class="hex" data-position="2"></div>
-                <div class="hex" data-position="2-0"></div>
-                <div class="hex" data-position="3-2"></div>
-                <div class="hex" data-position="3"></div>
-                <div class="hex" data-position="3-0"></div>
-                <div class="hex" data-position="4-2"></div>
-                <div class="hex" data-position="4"></div>
-                <div class="hex" data-position="4-0"></div>
-                <div class="hex" data-position="5-2"></div>
-                <div class="hex" data-position="5"></div>
-                <div class="hex" data-position="5-0"></div>
-                <div class="hex" data-position="6-2"></div>
-                <div class="hex" data-position="6"></div>
-                <div class="hex" data-position="6-0"></div>
-                <div class="hex" data-position="1-2"></div>
+                <div class="hex" data-position="1"><span class="designation-text">1</span></div>
+                <div class="hex" data-position="1-0"><span class="designation-text">1-0</span></div>
+                <div class="hex" data-position="2-2"><span class="designation-text">2-2</span></div>
+                <div class="hex" data-position="2"><span class="designation-text">2</span></div>
+                <div class="hex" data-position="2-0"><span class="designation-text">2-0</span></div>
+                <div class="hex" data-position="3-2"><span class="designation-text">3-2</span></div>
+                <div class="hex" data-position="3"><span class="designation-text">3</span></div>
+                <div class="hex" data-position="3-0"><span class="designation-text">3-0</span></div>
+                <div class="hex" data-position="4-2"><span class="designation-text">4-2</span></div>
+                <div class="hex" data-position="4"><span class="designation-text">4</span></div>
+                <div class="hex" data-position="4-0"><span class="designation-text">4-0</span></div>
+                <div class="hex" data-position="5-2"><span class="designation-text">5-2</span></div>
+                <div class="hex" data-position="5"><span class="designation-text">5</span></div>
+                <div class="hex" data-position="5-0"><span class="designation-text">5-0</span></div>
+                <div class="hex" data-position="6-2"><span class="designation-text">6-2</span></div>
+                <div class="hex" data-position="6"><span class="designation-text">6</span></div>
+                <div class="hex" data-position="6-0"><span class="designation-text">6-0</span></div>
+                <div class="hex" data-position="1-2"><span class="designation-text">1-2</span></div>
             </div>
         </div>
     </div>
