Made another small change to models used and added the settings tab with api key inputs.

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -12,7 +12,8 @@
 
     <!-- Tab Navigation -->
     <div class="tab-nav">
-        <button class="tab-button active" data-tab="rules">Rules Q&A</button>
+        <button class="tab-button active" data-tab="settings">Settings</button>
+        <button class="tab-button" data-tab="rules">Rules Q&A</button>
         <button class="tab-button" data-tab="strategy">Strategy Suggester</button>
         <button class="tab-button" data-tab="fleet">Fleet Manager</button>
         <button class="tab-button" data-tab="move">Move Suggester</button>
