--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block tab_content %}
+    {% include 'settings.html' %}
     {% include 'rules.html' %}
     {% include 'strategy.html' %}
     {% include 'move.html' %}
