--- a/frontend/templates/rules.html
+++ b/frontend/templates/rules.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div id="rules" class="tab-pane active">
+<div id="rules" class="tab-pane">
     <h2>Rules Q&A</h2>
     <textarea id="rules-question"
               placeholder="Ask a rules question (e.g., Can I move a carrier two tiles?)"></textarea>
