--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -11,11 +11,47 @@
     --hex-grid-center-left: calc(50% - (var(--hex-grid-width) / 2));
 }
 
+@font-face {
+  font-family: 'Azonix';
+  src: url('/static/fonts/azonix/Azonix.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Define Orbitron */
+@font-face {
+  font-family: 'Orbitron';
+  src: url('/static/fonts/orbitron/Orbitron-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Orbitron-Bold';
+  src: url('/static/fonts/orbitron/Orbitron-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Orbitron-ExtraBold';
+  src: url('/static/fonts/orbitron/Orbitron-ExtraBold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'OCR-A';
+  src: url('/static/fonts/ocr-a/OCR-a___.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: black;
 }
 
 .container {
@@ -28,8 +64,23 @@ body {
 }
 
 h1 {
+    font-family: 'Azonix', sans-serif;
+    font-weight: normal;
     text-align: center;
     color: #333;
+}
+
+h2 {
+    font-family: 'Orbitron-Bold', sans-serif;
+}
+
+h3, h4, button {
+    font-family: 'Orbitron', sans-serif;
+}
+
+input, textarea, select, label, p, span {
+    font-family: 'OCR-A', sans-sarif;
+    font-weight: 600;
 }
 
 .tab-nav {
@@ -45,6 +96,9 @@ h1 {
     border: none;
     cursor: pointer;
     text-align: center;
+    font-family: 'Orbitron-ExtraBold', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
 }
 
 .tab-button.active {
@@ -93,6 +147,8 @@ button:disabled {
     border: 1px solid #ddd;
     border-radius: 5px;
     white-space: pre-wrap;
+    font-family: 'OCR-A', sans-sarif;
+    font-weight: 600;
 }
 
 .tts-input-container {
