--- a/frontend/templates/tactical.html
+++ b/frontend/templates/tactical.html
@@ -212,7 +212,7 @@
 
     <button id="tactical-calculate" onclick="tacticalCalculator()">Calculate</button>
 
-    <div id="tactical-calculation-results">
+    <div id="tactical-calculation-results" class="response-box">
         <p>Odds of Victory: [To be calculated]</p>
     </div>
     <link rel="stylesheet" href="static/css/tactical_calculator.css">
