Making a small change to how one of the files are referenced to see if Render picks up on it.

--- a/templates/tactical.html
+++ b/templates/tactical.html
@@ -36,7 +36,7 @@
                 <span class="unit-count" id="friendly-cruiser-count">0</span>
             </div>
             <div class="unit-row" data-unit="carrier">
-                <span class="unit-icon"><img src="/static/images/ships/carrier_icon.png" class="ship-icon"
+                <span class="unit-icon"><img src="{% static 'images/ships/carrier_icon.png' %}" class="ship-icon"
                                              alt="Carrier"><span class="tooltiptext">Carrier</span></span>
                 <div class="arrow-container">
                     <button class="arrow up" data-unit="friendly-carrier">▲</button>
@@ -104,7 +104,7 @@
                 <span class="unit-count" id="enemy-cruiser-count">0</span>
             </div>
             <div class="unit-row" data-unit="carrier">
-                <span class="unit-icon"><img src="/static/images/ships/carrier_icon.png" class="ship-icon"
+                <span class="unit-icon"><img src="{% static 'images/ships/carrier_icon.png' %}" class="ship-icon"
                                              alt="Carrier"><span class="tooltiptext">Carrier</span></span>
                 <div class="arrow-container">
                     <button class="arrow up" data-unit="enemy-carrier">▲</button>
