--- a/templates/fleet.html
+++ b/templates/fleet.html
@@ -1,6 +1,9 @@
 {% load static %}
 <div id="fleet" class="tab-pane">
     <h2>Fleet Manager</h2>
+    <p>Don't have a TTS String? Generate a game (6 player with Prophecy of Kings only):
+        <a href="https://milty.shenanigans.be/" target="_blank">https://milty.shenanigans.be/</a>
+    </p>
     <div class="tts-input-container">
         <input type="text" id="tts-input-fleet" placeholder="Paste TTS String from Milty draft tool">
         <button onclick="generateGame('fleet')">Generate</button>
