Added some helpful text to the tactical calculator and made an update to the prompt.

--- a/templates/tactical.html
+++ b/templates/tactical.html
@@ -145,7 +145,10 @@
     <!-- Ground Forces Div -->
     <div id="ground-forces-section">
         <h3>Ground Forces</h3>
-        <!-- Friendly Ground Forces -->
+        <p>
+            Adding ground forces to the enemy side will change the victory condition
+            to eliminating the enemy fleet AND successfully taking the planet.
+        </p>
         <div class="ground-section friendly">
             <h4>Friendly Ground Forces</h4>
             <div class="unit-row" data-unit="infantry">
@@ -168,7 +171,6 @@
             </div>
         </div>
 
-        <!-- Enemy Ground Forces and Structures -->
         <div class="ground-section enemy">
             <h4>Enemy Ground Forces and Structures</h4>
             <div class="unit-row" data-unit="infantry">
